--- a/.admin/public/css/print.css
+++ b/.admin/public/css/print.css
@@ -17,7 +17,6 @@ h5 {
   page-break-after: avoid;
 }
 
-table,
 figure,
 .no-break {
   page-break-inside: avoid;
@@ -53,7 +52,7 @@ table td .note p {
 }
 
 .header {
-  padding: 20px;
+  padding: 20px 0;
 }
 .header img {
   max-width: 220px;
@@ -106,7 +105,7 @@ tr.item td p {
 .totalRow td {
   text-align: right;
   padding: 10px;
-  font-weight: 600;
+  font-weight: bold;
   padding-bottom: 0px;
 }
 
@@ -131,4 +130,8 @@ tr.item td p {
 
 sup {
   font-size: 10px;
+}
+
+.client-header .address p {
+  line-height: normal;
 }/*# sourceMappingURL=print.css.map */
